[package]
name = "ldk-sample"
version = "0.1.0"
authors = ["Valentine Wallace <vwallace@protonmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lightning = { version = "0.0.118", features = ["max_level_trace"] }
lightning-block-sync = { version = "0.0.118", features = [ "rpc-client", "tokio" ] }
lightning-invoice = { version = "0.26.0" }
lightning-net-tokio = { version = "0.0.118" }
lightning-persister = { version = "0.0.118" }
lightning-background-processor = { version = "0.0.118", features = [ "futures" ] }
lightning-rapid-gossip-sync = { version = "0.0.118" }
#lightning = { path = "../../ldk/work2/lightning", features = ["max_level_trace"] }
#lightning-block-sync = { path = "../../ldk/work2/lightning-block-sync", features = [ "rpc-client", "tokio" ] }
#lightning-invoice = { path = "../../ldk/work2/lightning-invoice" }
#lightning-net-tokio = { path = "../../ldk/work2/lightning-net-tokio" }
#lightning-persister = { path = "../../ldk/work2/lightning-persister" }
#lightning-background-processor = { path = "../../ldk/work2/lightning-background-processor", features = [ "futures" ] }
#lightning-rapid-gossip-sync = { path = "../../ldk/work2/lightning-rapid-gossip-sync" }

base64 = "0.13.0"
bitcoin = "0.30.2"
bitcoin-bech32 = "0.12"
bech32 = "0.8"
libc = "0.2"

chrono = { version = "0.4", default-features = false, features = ["clock"] }
rand = "0.4"
serde_json = { version = "1.0" }
tokio = { version = "1", features = [ "io-util", "macros", "rt", "rt-multi-thread", "sync", "net", "time" ] }

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
